--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ on:
     push:
         branches:
             - master
-    workflow_dispatch:
-    schedule:
-        - cron: "0 0 * * *"
+#    workflow_dispatch:
+#    schedule:
+#        - cron: "0 0 * * *"
 
 jobs:
     validation:
